Implement initial support for conditional styling through variants.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -109,38 +109,38 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_pattern_scanner\n",
-    "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_example_discovery\n",
+    "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_helper_discovery\n",
     "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_imports\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_factory_extraction --> core_base\n",
     "    cli_factory_extraction --> cli_utils\n",
-    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_helper_discovery --> cli_utils\n",
+    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_imports --> cli_factory_extraction\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_imports --> cli_utils\n",
-    "    cli_imports --> cli_helper_discovery\n",
     "    cli_search --> cli_utils\n",
+    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
-    "    cli_search --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_utils\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    core_testing --> utilities_layout\n",
     "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_spacing\n",
-    "    core_testing --> core_base\n",
     "    core_testing --> core_resources\n",
-    "    utilities_accessibility --> utilities_layout\n",
+    "    core_testing --> core_base\n",
     "    utilities_accessibility --> core_base\n",
+    "    utilities_accessibility --> utilities_layout\n",
     "    utilities_accessibility --> builders_scales\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_scales\n",
@@ -148,8 +148,8 @@
     "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_scales\n",
     "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_scales\n",
@@ -163,11 +163,11 @@
     "    utilities_layout --> builders_scales\n",
     "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> builders_scales\n",
     "    utilities_spacing --> core_base\n",
+    "    utilities_spacing --> builders_scales\n",
     "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> builders_scales\n",
     "    utilities_tables --> core_base\n",
     "    utilities_tables --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
@@ -605,9 +605,20 @@
     "    TailwindArbitrary,\n",
     "    TailwindCustomProperty,\n",
     "    TailwindValue,\n",
+    "    PSEUDO_CLASS_MODIFIERS,\n",
+    "    PSEUDO_ELEMENT_MODIFIERS,\n",
+    "    RESPONSIVE_MODIFIERS,\n",
+    "    THEME_MODIFIERS,\n",
+    "    MOTION_MODIFIERS,\n",
+    "    PRINT_MODIFIERS,\n",
+    "    ORIENTATION_MODIFIERS,\n",
+    "    CONTRAST_MODIFIERS,\n",
+    "    DIRECTION_MODIFIERS,\n",
+    "    STATE_MODIFIERS,\n",
+    "    CHILD_MODIFIERS,\n",
+    "    ALL_MODIFIER_GROUPS,\n",
     "    CONTAINER_SCALES,\n",
     "    BREAKPOINTS,\n",
-    "    STATE_MODIFIERS,\n",
     "    T,\n",
     "    DIRECTIONS,\n",
     "    is_numeric_scale,\n",
@@ -616,6 +627,8 @@
     "    is_arbitrary_value,\n",
     "    TailwindBuilder,\n",
     "    BaseUtility,\n",
+    "    ModifierMixin,\n",
+    "    ModifierGroup,\n",
     "    StandardUtility,\n",
     "    NamedScale,\n",
     "    Breakpoint,\n",
@@ -700,11 +713,273 @@
     "            value: Optional[TailwindValue] = None  # Optional value to override the stored value\n",
     "        ) -> str:  # The built CSS class string\n",
     "        \"Build and return the CSS class string.\"\n",
+    "    \n",
+    "    def with_modifiers(\n",
+    "            self,\n",
+    "            *modifiers: str  # Modifier strings to apply (e.g., 'hover', 'focus', 'dark')\n",
+    "        ) -> 'BaseUtility':  # A new instance with the modifiers applied\n",
+    "        \"Create a new instance with additional modifiers.\n",
+    "Modifiers are applied in the order they are passed.\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "class StandardUtility(BaseUtility):\n",
-    "    \"Standard utility class with common value formatting.\"\n",
+    "class ModifierMixin:\n",
+    "    \"Mixin to add modifier support to any utility with convenient property access.\"\n",
+    "    \n",
+    "    def hover(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply hover modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"hover\")\n",
+    "        \n",
+    "        @property\n",
+    "        def focus(self) -> 'BaseUtility'\n",
+    "        \"Apply hover modifier.\"\n",
+    "    \n",
+    "    def focus(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply focus modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"focus\")\n",
+    "        \n",
+    "        @property\n",
+    "        def active(self) -> 'BaseUtility'\n",
+    "        \"Apply focus modifier.\"\n",
+    "    \n",
+    "    def active(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply active modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"active\")\n",
+    "        \n",
+    "        @property\n",
+    "        def visited(self) -> 'BaseUtility'\n",
+    "        \"Apply active modifier.\"\n",
+    "    \n",
+    "    def visited(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply visited modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"visited\")\n",
+    "        \n",
+    "        @property\n",
+    "        def disabled(self) -> 'BaseUtility'\n",
+    "        \"Apply visited modifier.\"\n",
+    "    \n",
+    "    def disabled(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply disabled modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"disabled\")\n",
+    "        \n",
+    "        @property\n",
+    "        def checked(self) -> 'BaseUtility'\n",
+    "        \"Apply disabled modifier.\"\n",
+    "    \n",
+    "    def checked(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply checked modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"checked\")\n",
+    "        \n",
+    "        @property\n",
+    "        def required(self) -> 'BaseUtility'\n",
+    "        \"Apply checked modifier.\"\n",
+    "    \n",
+    "    def required(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply required modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"required\")\n",
+    "        \n",
+    "        @property\n",
+    "        def invalid(self) -> 'BaseUtility'\n",
+    "        \"Apply required modifier.\"\n",
+    "    \n",
+    "    def invalid(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply invalid modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"invalid\")\n",
+    "        \n",
+    "        @property\n",
+    "        def valid(self) -> 'BaseUtility'\n",
+    "        \"Apply invalid modifier.\"\n",
+    "    \n",
+    "    def valid(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply valid modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"valid\")\n",
+    "        \n",
+    "        # Pseudo-element modifiers\n",
+    "        @property\n",
+    "        def before(self) -> 'BaseUtility'\n",
+    "        \"Apply valid modifier.\"\n",
+    "    \n",
+    "    def before(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply before pseudo-element modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"before\")\n",
+    "        \n",
+    "        @property\n",
+    "        def after(self) -> 'BaseUtility'\n",
+    "        \"Apply before pseudo-element modifier.\"\n",
+    "    \n",
+    "    def after(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply after pseudo-element modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"after\")\n",
+    "        \n",
+    "        @property\n",
+    "        def placeholder(self) -> 'BaseUtility'\n",
+    "        \"Apply after pseudo-element modifier.\"\n",
+    "    \n",
+    "    def placeholder(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply placeholder modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"placeholder\")\n",
+    "        \n",
+    "        @property\n",
+    "        def selection(self) -> 'BaseUtility'\n",
+    "        \"Apply placeholder modifier.\"\n",
+    "    \n",
+    "    def selection(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply selection modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"selection\")\n",
+    "        \n",
+    "        # Responsive modifiers\n",
+    "        @property\n",
+    "        def sm(self) -> 'BaseUtility'\n",
+    "        \"Apply selection modifier.\"\n",
+    "    \n",
+    "    def sm(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply small breakpoint modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"sm\")\n",
+    "        \n",
+    "        @property\n",
+    "        def md(self) -> 'BaseUtility'\n",
+    "        \"Apply small breakpoint modifier.\"\n",
+    "    \n",
+    "    def md(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply medium breakpoint modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"md\")\n",
+    "        \n",
+    "        @property\n",
+    "        def lg(self) -> 'BaseUtility'\n",
+    "        \"Apply medium breakpoint modifier.\"\n",
+    "    \n",
+    "    def lg(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply large breakpoint modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"lg\")\n",
+    "        \n",
+    "        @property\n",
+    "        def xl(self) -> 'BaseUtility'\n",
+    "        \"Apply large breakpoint modifier.\"\n",
+    "    \n",
+    "    def xl(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply extra large breakpoint modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"xl\")\n",
+    "        \n",
+    "        @property\n",
+    "        def _2xl(self) -> 'BaseUtility'\n",
+    "        \"Apply extra large breakpoint modifier.\"\n",
+    "    \n",
+    "    def dark(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply dark mode modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"dark\")\n",
+    "        \n",
+    "        # Motion modifiers\n",
+    "        @property\n",
+    "        def motion_reduce(self) -> 'BaseUtility'\n",
+    "        \"Apply dark mode modifier.\"\n",
+    "    \n",
+    "    def motion_reduce(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply reduced motion modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"motion-reduce\")\n",
+    "        \n",
+    "        @property\n",
+    "        def motion_safe(self) -> 'BaseUtility'\n",
+    "        \"Apply reduced motion modifier.\"\n",
+    "    \n",
+    "    def motion_safe(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply safe motion modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"motion-safe\")\n",
+    "        \n",
+    "        # Structural modifiers\n",
+    "        @property\n",
+    "        def first(self) -> 'BaseUtility'\n",
+    "        \"Apply safe motion modifier.\"\n",
+    "    \n",
+    "    def first(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply first child modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"first\")\n",
+    "        \n",
+    "        @property\n",
+    "        def last(self) -> 'BaseUtility'\n",
+    "        \"Apply first child modifier.\"\n",
+    "    \n",
+    "    def last(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply last child modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"last\")\n",
+    "        \n",
+    "        @property\n",
+    "        def odd(self) -> 'BaseUtility'\n",
+    "        \"Apply last child modifier.\"\n",
+    "    \n",
+    "    def odd(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply odd child modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"odd\")\n",
+    "        \n",
+    "        @property\n",
+    "        def even(self) -> 'BaseUtility'\n",
+    "        \"Apply odd child modifier.\"\n",
+    "    \n",
+    "    def even(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply even child modifier.\"\"\"\n",
+    "            return self.with_modifiers(\"even\")\n",
+    "        \n",
+    "        # Group and peer modifiers\n",
+    "        def group(\n",
+    "            self, \n",
+    "            state: Optional[str] = None,  # Optional state like 'hover', 'focus'\n",
+    "            name: Optional[str] = None    # Optional group name for nested groups\n",
+    "        ) -> 'BaseUtility':  # The utility with group modifier applied\n",
+    "        \"Apply even child modifier.\"\n",
+    "    \n",
+    "    def group(\n",
+    "            self, \n",
+    "            state: Optional[str] = None,  # Optional state like 'hover', 'focus'\n",
+    "            name: Optional[str] = None    # Optional group name for nested groups\n",
+    "        ) -> 'BaseUtility':  # The utility with group modifier applied\n",
+    "        \"Apply group modifier with optional state and name.\"\n",
+    "    \n",
+    "    def peer(\n",
+    "            self, \n",
+    "            state: Optional[str] = None,  # Optional state like 'hover', 'focus'\n",
+    "            name: Optional[str] = None    # Optional peer name for multiple peers\n",
+    "        ) -> 'BaseUtility':  # The utility with peer modifier applied\n",
+    "        \"Apply peer modifier with optional state and name.\"\n",
+    "    \n",
+    "    def has(\n",
+    "            self,\n",
+    "            selector: str  # CSS selector for :has() pseudo-class\n",
+    "        ) -> 'BaseUtility':  # The utility with has modifier applied\n",
+    "        \"Apply has modifier with a selector.\"\n",
+    "    \n",
+    "    def aria(\n",
+    "            self,\n",
+    "            attribute: str,  # ARIA attribute name\n",
+    "            value: Optional[str] = None  # Optional value for the attribute\n",
+    "        ) -> 'BaseUtility':  # The utility with aria modifier applied\n",
+    "        \"Apply aria modifier with attribute and optional value.\"\n",
+    "    \n",
+    "    def data(\n",
+    "            self,\n",
+    "            attribute: str,  # Data attribute name\n",
+    "            value: Optional[str] = None  # Optional value for the attribute\n",
+    "        ) -> 'BaseUtility':  # The utility with data modifier applied\n",
+    "        \"Apply data modifier with attribute and optional value.\"\n",
+    "    \n",
+    "    def arbitrary(\n",
+    "            self,\n",
+    "            selector: str  # Arbitrary CSS selector\n",
+    "        ) -> 'BaseUtility':  # The utility with arbitrary modifier applied\n",
+    "        \"Apply arbitrary modifier with custom selector.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "@dataclass\n",
+    "class ModifierGroup:\n",
+    "    \"Group of related modifiers with descriptions.\"\n",
+    "    \n",
+    "    name: str\n",
+    "    description: str\n",
+    "    modifiers: Dict[str, str]  # modifier_name -> tailwind_variant\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class StandardUtility(BaseUtility, ModifierMixin):\n",
+    "    \"Standard utility class with common value formatting and modifier support.\"\n",
     "    \n",
     "```\n",
     "\n",
@@ -864,6 +1139,18 @@
     "TailwindArbitrary  # Arbitrary values like \"123px\", \"10rem\"\n",
     "TailwindCustomProperty  # CSS custom properties like \"--spacing-lg\"\n",
     "TailwindValue  # Union of all possible value types\n",
+    "PSEUDO_CLASS_MODIFIERS\n",
+    "PSEUDO_ELEMENT_MODIFIERS\n",
+    "RESPONSIVE_MODIFIERS\n",
+    "THEME_MODIFIERS\n",
+    "MOTION_MODIFIERS\n",
+    "PRINT_MODIFIERS\n",
+    "ORIENTATION_MODIFIERS\n",
+    "CONTRAST_MODIFIERS\n",
+    "DIRECTION_MODIFIERS\n",
+    "STATE_MODIFIERS\n",
+    "CHILD_MODIFIERS\n",
+    "ALL_MODIFIER_GROUPS = [11 items]\n",
     "CONTAINER_SCALES = [13 items]  # Common named scales used across utilities\n",
     "BREAKPOINTS = {5 items}  # Common breakpoints\n",
     "STATE_MODIFIERS = [39 items]  # Common state modifiers\n",
@@ -1194,6 +1481,7 @@
     "    test_colors_proxy_examples,\n",
     "    test_colors_multiple_utilities_examples,\n",
     "    test_colors_practical_usage_examples,\n",
+    "    test_colors_modifier_examples,\n",
     "    get_all_color_families,\n",
     "    get_all_shades,\n",
     "    get_all_color_specs,\n",
@@ -1269,6 +1557,11 @@
     "```python\n",
     "def test_colors_practical_usage_examples()\n",
     "    \"Test practical usage patterns with FastHTML components.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_colors_modifier_examples()\n",
+    "    \"Test color utilities with modifiers for conditional styling.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -3641,6 +3934,7 @@
     "    OverscrollFactory,\n",
     "    test_layout_other_utilities_examples,\n",
     "    test_layout_practical_examples,\n",
+    "    test_layout_modifier_examples,\n",
     "    test_layout_factory_documentation,\n",
     "    center_absolute,\n",
     "    stack_context,\n",
@@ -3722,6 +4016,12 @@
     "def test_layout_practical_examples(\n",
     ")\n",
     "    \"Test layout utilities in practical FastHTML component examples.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_layout_modifier_examples(\n",
+    ")\n",
+    "    \"Test layout utilities with modifiers for conditional styling.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -4769,6 +5069,7 @@
     "    pad,\n",
     "    margin,\n",
     "    test_spacing_helper_examples,\n",
+    "    test_spacing_modifier_examples,\n",
     "    test_spacing_factory_documentation\n",
     ")\n",
     "```\n",
@@ -4860,6 +5161,12 @@
     "def test_spacing_helper_examples(\n",
     ")\n",
     "    \"Test helper functions for common spacing patterns.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def test_spacing_modifier_examples(\n",
+    ")\n",
+    "    \"Test spacing utilities with modifiers for conditional styling.\"\n",
     "```\n",
     "\n",
     "```python\n",
