--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -1255,6 +1255,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "xo4u7gosto",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def test_layout_modifier_examples(\n",
+    "):\n",
+    "    \"\"\"Test layout utilities with modifiers for conditional styling.\"\"\"\n",
+    "    # Test display utilities with modifiers\n",
+    "    assert display_tw.hidden == \"hidden\"\n",
+    "    assert display_tw.block == \"block\"\n",
+    "    # Note: display utilities return strings, not utilities, so they don't have modifiers\n",
+    "    # This is intentional as they use SimpleFactory\n",
+    "    \n",
+    "    # Test position utilities with modifiers\n",
+    "    # Note: position utilities also use SimpleFactory and return strings\n",
+    "    \n",
+    "    # Test inset utilities with modifiers (these support modifiers)\n",
+    "    assert str(inset(0).hover) == \"hover:inset-0\"\n",
+    "    assert str(top(4).md) == \"md:top-4\"\n",
+    "    assert str(bottom.auto.lg) == \"lg:bottom-auto\"\n",
+    "    assert str(left.negative(2).hover) == \"hover:-left-2\"\n",
+    "    \n",
+    "    # Test z-index with modifiers\n",
+    "    assert str(z(10).hover) == \"hover:z-10\"\n",
+    "    assert str(z(50).lg) == \"lg:z-50\"\n",
+    "    assert str(z.auto.dark) == \"dark:z-auto\"\n",
+    "    \n",
+    "    # Test responsive inset\n",
+    "    assert str(inset.x(4).sm) == \"sm:inset-x-4\"\n",
+    "    assert str(inset.y(8).md) == \"md:inset-y-8\"\n",
+    "    \n",
+    "    # Test group/peer modifiers\n",
+    "    assert str(z(20).group(\"hover\")) == \"group-hover:z-20\"\n",
+    "    assert str(inset(0).peer(\"checked\")) == \"peer-checked:inset-0\"\n",
+    "    \n",
+    "    # Test arbitrary modifiers\n",
+    "    assert str(top(0).aria(\"expanded\")) == \"aria-expanded:top-0\"\n",
+    "    assert str(z(30).data(\"open\")) == \"data-[open]:z-30\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_layout_modifier_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "li95e4biwp8",
    "metadata": {},
    "outputs": [],
