--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -602,6 +602,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "nh0k5ckn7w",
+   "metadata": {},
+   "source": [
+    "## Modifiers with Spacing Utilities\n",
+    "\n",
+    "Spacing utilities support all Tailwind modifiers for conditional styling:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "o1nlm3pt67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def test_spacing_modifier_examples(\n",
+    "):\n",
+    "    \"\"\"Test spacing utilities with modifiers for conditional styling.\"\"\"\n",
+    "    # Test hover states\n",
+    "    assert str(p(4).hover) == \"hover:p-4\"\n",
+    "    assert str(m.x(8).hover) == \"hover:mx-8\"\n",
+    "    assert str(p.t(2).hover.focus) == \"focus:hover:pt-2\"\n",
+    "    \n",
+    "    # Test responsive modifiers\n",
+    "    assert str(p(4).sm) == \"sm:p-4\"\n",
+    "    assert str(m.x(8).md) == \"md:mx-8\"\n",
+    "    assert str(p.y(0).lg) == \"lg:py-0\"\n",
+    "    assert str(m.negative(4).xl) == \"xl:-m-4\"\n",
+    "    \n",
+    "    # Test dark mode\n",
+    "    assert str(p(8).dark) == \"dark:p-8\"\n",
+    "    assert str(m.x.auto.dark) == \"dark:mx-auto\"\n",
+    "    \n",
+    "    # Test chained modifiers\n",
+    "    assert str(p(4).hover.md) == \"md:hover:p-4\"\n",
+    "    assert str(m(8).dark.lg.hover) == \"hover:lg:dark:m-8\"\n",
+    "    \n",
+    "    # Test with space utilities\n",
+    "    assert str(space.x(4).hover) == \"hover:space-x-4\"\n",
+    "    assert str(space.y(2).md) == \"md:space-y-2\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_spacing_modifier_examples()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bw0lktq11pl",
@@ -642,14 +690,6 @@
     "# Run the tests\n",
     "test_spacing_factory_documentation()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bfbc7ce-7328-43b7-97e4-d4fcf9059e9c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
