--- a/nbs/builders/colors.ipynb
+++ b/nbs/builders/colors.ipynb
@@ -42,7 +42,7 @@
     "from typing import Dict, List, Union, Optional, Any\n",
     "from enum import Enum\n",
     "from cjm_fasthtml_tailwind.core.base import (\n",
-    "    BaseUtility, StandardUtility, BaseFactory,\n",
+    "    BaseUtility, StandardUtility, BaseFactory, ModifierMixin,\n",
     "    TailwindValue, is_custom_property, is_arbitrary_value\n",
     ")"
    ]
@@ -262,7 +262,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class ColoredUtility(BaseUtility):\n",
+    "class ColoredUtility(BaseUtility, ModifierMixin):\n",
     "    \"\"\"Utility class with color and opacity support.\"\"\"\n",
     "    \n",
     "    def __init__(\n",
@@ -927,6 +927,54 @@
     "\n",
     "# Run the test\n",
     "test_colors_practical_usage_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "wjv4ihfbzd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def test_colors_modifier_examples():\n",
+    "    \"\"\"Test color utilities with modifiers for conditional styling.\"\"\"\n",
+    "    bg = ColoredFactory(\"bg\")\n",
+    "    text = ColoredFactory(\"text\")\n",
+    "    border = ColoredFactory(\"border\")\n",
+    "    \n",
+    "    # Test hover states\n",
+    "    assert str(bg.red._500.hover) == \"hover:bg-red-500\"\n",
+    "    assert str(text.blue._700.hover) == \"hover:text-blue-700\"\n",
+    "    assert str(border.gray._300.hover) == \"hover:border-gray-300\"\n",
+    "    \n",
+    "    # Test with opacity and modifiers\n",
+    "    assert str(bg.black.opacity(50).hover) == \"hover:bg-black/50\"\n",
+    "    assert str(text.white.hover.opacity(75)) == \"hover:text-white/75\"\n",
+    "    \n",
+    "    # Test responsive modifiers\n",
+    "    assert str(bg.red._500.md) == \"md:bg-red-500\"\n",
+    "    assert str(text.blue._700.lg) == \"lg:text-blue-700\"\n",
+    "    assert str(border.transparent.sm) == \"sm:border-transparent\"\n",
+    "    \n",
+    "    # Test dark mode\n",
+    "    assert str(bg.gray._900.dark) == \"dark:bg-gray-900\"\n",
+    "    assert str(text.gray._100.dark) == \"dark:text-gray-100\"\n",
+    "    \n",
+    "    # Test chained modifiers\n",
+    "    assert str(bg.blue._600.hover.dark) == \"dark:hover:bg-blue-600\"\n",
+    "    assert str(text.red._500.md.hover.dark) == \"dark:hover:md:text-red-500\"\n",
+    "    \n",
+    "    # Test group and peer modifiers\n",
+    "    assert str(bg.gray._100.group(\"hover\")) == \"group-hover:bg-gray-100\"\n",
+    "    assert str(text.blue._600.peer(\"checked\")) == \"peer-checked:text-blue-600\"\n",
+    "    \n",
+    "    # Test arbitrary modifiers\n",
+    "    assert str(bg.green._500.aria(\"selected\")) == \"aria-selected:bg-green-500\"\n",
+    "    assert str(text.red._600.data(\"active\")) == \"data-[active]:text-red-600\"\n",
+    "\n",
+    "# Run the test\n",
+    "test_colors_modifier_examples()"
    ]
   },
   {
